--- a/waypoints/waypoints_real.yaml
+++ b/waypoints/waypoints_real.yaml
@@ -1,3 +1,16 @@
 pid_maze_solver:
   ros__parameters:
-    waypoints_real: []
+    waypoints_real: [0.925, 0.05, 0.0,   
+                     0.857, 0.0, -1.5708,
+                     0.0, -0.515, 0.0,
+                     -0.31, 0.0, 0.0,
+                     0.0, -0.54, 0.0,
+                     0.38, 0.0, 0.0,
+                     0.0, -0.535, 0.0,
+                     -0.415, 0.0, 0.0,
+                     -0.1, -0.335, -1.5708,
+                     -0.385, 0.0, -1.5708,
+                     0.0, 0.826, 1.5708,
+                     -0.485, 0.05, -1.5708,
+                     0.0, 0.51, 1.5708,
+                     -0.34, 0.0, 3.1415]
