--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(tf2 REQUIRED)
-find_package(tf2_ros REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
@@ -33,7 +32,7 @@ if(BUILD_TESTING)
 endif()
 
 add_executable(pid_maze_solver src/pid_maze_solver.cpp)
-ament_target_dependencies(pid_maze_solver rclcpp std_msgs geometry_msgs sensor_msgs nav_msgs tf2 tf2_ros yaml-cpp)
+ament_target_dependencies(pid_maze_solver rclcpp std_msgs geometry_msgs sensor_msgs nav_msgs tf2 yaml-cpp)
 
 target_link_libraries(pid_maze_solver yaml-cpp)
 
@@ -41,10 +40,16 @@ install(TARGETS
    pid_maze_solver
    DESTINATION lib/${PROJECT_NAME}
 )
-
+# install(DIRECTORY
+#   launch
+#   config
+#   DESTINATION share/${PROJECT_NAME}/
+# )
 install(
   FILES waypoints/waypoints_sim.yaml
   FILES waypoints/waypoints_real.yaml
+  FILES waypoints/reverse_waypoints_sim.yaml
+  FILES waypoints/reverse_waypoints_real.yaml
   DESTINATION share/${PROJECT_NAME}/waypoints
 )
 
