--- a/waypoints/reverse_waypoints_real.yaml
+++ b/waypoints/reverse_waypoints_real.yaml
@@ -1,3 +1,16 @@
 pid_maze_solver:
   ros__parameters:
-    waypoints_real: [0.0, 0.0, 0.0,]
+    waypoints_real: [0.34, 0.0, -1.5708,
+                     0.0, -0.51, 1.5708,
+                     0.47, -0.07, -1.5708,
+                     0.0, -0.85, 1.5708, 
+                     0.385, 0.0, 1.5708,
+                     0.1, 0.33, 0.0,
+                     0.424, 0.0, 0.0,
+                     0.0, 0.532, 0.0,
+                     -0.37, 0.0, 0.0,
+                     0.0, 0.535, 0.0,
+                     0.375, 0.0, 0.0,
+                     0.0, 0.515, 1.5708,
+                     -0.835, 0.0, 0.0,
+                     -0.91, 0.05, 3.1415]
